; ModuleID = '/home/carl/AnghaBench/reactos/ntoskrnl/mm/i386/extr_page.c_MmUnmapPageTable.c'
source_filename = "/home/carl/AnghaBench/reactos/ntoskrnl/mm/i386/extr_page.c_MmUnmapPageTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @MmUnmapPageTable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @MmUnmapPageTable(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = call i32 @IS_HYPERSPACE(i64 %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %9, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @TRUE, align 4
  store i32 %8, i32* %2, align 4
  br label %19

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %9
  %13 = load i64, i64* %3, align 8
  %14 = call i64 @PAGE_ROUND_DOWN(i64 %13)
  %15 = trunc i64 %14 to i32
  %16 = call i32 @MmDeleteHyperspaceMapping(i32 %15)
  br label %17

17:                                               ; preds = %12, %9
  %18 = load i32, i32* @FALSE, align 4
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %17, %7
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @IS_HYPERSPACE(i64) #1

declare dso_local i32 @MmDeleteHyperspaceMapping(i32) #1

declare dso_local i64 @PAGE_ROUND_DOWN(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
